--- a/chanel/index.html
+++ b/chanel/index.html
@@ -11,13 +11,17 @@
     <title>chanel</title>
 </head>
 <body>
+    
     <div class="padre">
         <img src="image-product-desktop.jpg" alt="">
     <div class="cuerpo">
-      <h3>PERFUME</h3>
+      <h4>P E R F U M E</h4>
       <h1>Gabrielle Essence Eau De Parfum</h1>
-      <h2>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</h2>
-      <h1 class="precio">$149.99</h1>  
+      <h3>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</h3>
+      <div class="precio">
+        <h1 >$149.99</h1> 
+        <h3>$169.99</h3>
+      </div> 
       <button>Add to Cart</button>
     </div>
     </div>
