--- a/chanel/index.html
+++ b/chanel/index.html
@@ -5,25 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Roboto+Condensed:wght@300&family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>chanel</title>
 </head>
 <body>
-    
-    <div class="padre">
-        <img src="image-product-desktop.jpg" alt="">
-    <div class="cuerpo">
-      <h4>P E R F U M E</h4>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-      <h3>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</h3>
-      <div class="precio">
-        <h1 >$149.99</h1> 
-        <h3>$169.99</h3>
-      </div> 
-      <button>Add to Cart</button>
+    <div class="todo">
+     <div class="padre">
+         <img src="image-product-desktop.jpg" alt="">
+     <div class="cuerpo">
+       <h4>P E R F U M E</h4>
+       <h1>Gabrielle Essence Eau De Parfum</h1>
+       <h3>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</h3>
+       <div class="precio">
+         <h1 >$149.99</h1> 
+         <h3>$169.99</h3>
+       </div> 
+       <button id="cambiar_color">Add to Cart</button>
+     </div>
+     </div>
     </div>
-    </div>
+    <script src="main.js"></script>
 </body>
 </html>
